Responsive Alignement fixes CSS

--- a/styles/style.css
+++ b/styles/style.css
@@ -1324,7 +1324,7 @@ footer {
 }
 
 .card-about-content {
-    margin: 45px 115px 50px -160px !important
+    margin: 41px 81px 50px -115px !important;
 }
 
 .h3-about-content {
